# setmeup

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: ansible.rs  config.rs  exec.rs  main.rs  provision.rs  setup.rs  sources.rs  ssh.rs  ui.rs  util.rs
tests/: ansible_playbook_args.yml  ansible_playbook_empty.yml  ansible_playbook_env.yml  ansible_playbook_no_name_env.yml  ansible_playbook_no_value_env.yml  ansible_playbook_non_executable_path.yml  ansible_playbook_non_existent_path.yml  ansible_playbook_non_list_args.yml  ansible_playbook_non_list_env.yml  ansible_playbook_non_string_arg.yml  ansible_playbook_non_string_env_name.yml  ansible_playbook_non_string_env_value.yml  ansible_playbook_non_string_path.yml  ansible_playbook_path.yml  git_invalid_url.yml  git_no_url.yml  git_non_string_url.yml  git_ok.yml  int_source_name.yml  invalid.yml  invalid_playbook_match.yml  local_no_path.yml  local_non_dir_path.yml  local_non_string_path.yml  local_ok.yml  located.yml  no_sources.yml  non_boolean_recurse.yml  non_string_playbook_match.yml  non_string_pre_provision.yml  non_string_source_type.yml  pre_provision_ok.yml  recurse.yml  unknown_source_type.yml
