[package]
name = "setmeup"
version = "0.2.0"
authors = ["Julien JPK <julienjpk@email.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
directories = "3.0.1"
yaml-rust = "0.4.5"
regex = "1.4.5"
faccess = "0.2.3"
osshkeys = "0.5.0"
ssh2 = "0.9.1"
termcolor = "1.1.2"
walkdir = "2.3.2"
tempfile = "3.2.0"
atty = "0.2.14"

[dev-dependencies]
ctor = "0.1.20"
array_tool = "1.0.3"
