[package]
name = "setmeup"
description = "Minimalistic Ansible-based remote provisioning tool"
version = "0.3.0"
authors = ["Julien JPK <mail@jjpk.me>"]
repository = "https://gitlab.com/julienjpk/setmeup/"
license = "AGPL-3.0-or-later"
keywords = ["dotfiles", "ansible", "provision"]
categories = ["command-line-utilities", "config"]
edition = "2018"

[dependencies]
clap = "3.2"
directories = "4.0"
yaml-rust = "0.4"
regex = "1.4"
faccess = "0.2"
osshkeys = "0.6"
ssh2 = "0.9"
walkdir = "2.3"
tempfile = "3.2"
atty = "0.2"
serde_json = "1.0"
lazy_static = "1.4"
termion = "1.5"

[dev-dependencies]
ctor = "0.1"
array_tool = "1.0"
